# CompetitiveProgramming

./: .gitignore  CMakeLists.txt  clean_all_subdirs.ps1  cleanup_folders.ps1  organize_problems.ps1  organize_problems_flat.ps1  s.sass
Codechef/: PRIMEDST.cpp
HDU/: 1043.cpp  1495.cpp  1560.cpp  2102.cpp  2181.cpp  3001.cpp  3567.cpp  4135.cpp  4625.cpp
LOJ/: 1117.CPP  1124.cpp  528.cpp  6160.cpp  6181.cpp  6244.cpp
Olympiads/: OII_18_Cena.cpp
POJ/: 2152.cpp
UVA/: 10055.cpp  10063.cpp  10263.cpp  10276.cpp  10344.cpp  10445.cpp  10475.cpp  10514.cpp  10653.cpp  10709.cpp  10807.cpp  10902.cpp  1098.cpp  11195.cpp  11212.cpp  11694.cpp  12003.cpp  12012.cpp  12303.cpp  129.cpp  152.cpp  167.cpp  191.cpp  216.cpp  222.cpp  225.cpp  273.cpp  301.cpp  307.cpp  331.cpp  378.cpp  437.cpp  524.cpp  527.cpp  574.cpp  610.cpp  628.cpp  677.cpp  729.cpp  750.cpp  (+5 more)
Usaco/: 16feb_Balancing_plat.cpp  19feb_Cowdate_plat.cpp  Gold_19mar_Balancing.cpp  feb16_fencedin_plat.cpp  feb17_platinum3.cpp  feb_15_gold2.cpp  jan18_lifeguards_plat.cpp  jan20_gold2.cpp
aizu/: 0005.cpp  0009.cpp  0033.cpp  0531.cpp  0574.cpp  cgl_7_b.cpp  cgl_7_c.cpp  cgl_7_d.cpp  cgl_7_e.cpp  cgl_7_f.cpp  cgl_7_g.cpp  cgl_7_h.cpp  cgl_7_i.cpp  dpl_1_b.cpp
atcoder/: Atcoder059-ARC-E.cpp  Atcoder060-ARC-E.cpp  Atcoder060-ARC-F.cpp  Atcoder061-ARC-E.cpp  Atcoder062-ARC-E.cpp  Atcoder064-ARC-F.cpp  Atcoder066-ARC-E.cpp  Atcoder067-ARC-F.cpp  Atcoder068-ARC-E.cpp  Atcoder069-ARC-E.cpp  Atcoder069-ARC-F.cpp  Atcoder071-ARC-F.cpp  Atcoder073-ARC-E.cpp  Atcoder075-ARC-E.cpp  Atcoder076-ARC-E.cpp  Atcoder078-ARC-E.cpp  Atcoder079-ARC-E.cpp  Atcoder079-ARC-F.cpp  Atcoder080-ARC-E.cpp  Atcoder082-ARC-E.cpp  Atcoder083-ARC-E.cpp  Atcoder084-ARC-E.cpp  Atcoder084-ARC-F.cpp  Atcoder088-ARC-F.cpp  Atcoder100-ARC-C.cpp  Atcoder160-ARC-F.cpp  Atcoder204-ABC-F.cpp  abc062_a.cpp  abc099_c.cpp  abc139_b.cpp  abc154_c.cpp  abc160_b.cpp  abc173_d.cpp  abc224_c.cpp  abc259_a.cpp  abc259_b.cpp  abc259_c.cpp  abc259_d.cpp  abc259_e.cpp  abc259_f.cpp  (+53 more)
baekjoon/: 10068.cpp  10136.cpp  13433.cpp  15370.cpp  18257.cpp  19556.cpp  19558.cpp  19619.cpp  20583.cpp  5253.cpp
balkan/: Balkang_09_Reading.cpp
codechef/: amcs04.cpp  amr14f.cpp  angle.cpp  beauty.cpp  btcd1502.cpp  chefcomp.cpp  chefland.cpp  cirkill.cpp  closefar.cpp  cocr04.cpp  cocr09.cpp  covering.cpp  danyanum.cpp  fibxor01.cpp  fncs.cpp  gcdq.cpp  gerald07.cpp  iiti15.cpp  maxor.cpp  monster.cpp  oneking.cpp  palindr.cpp  prcnsr2.cpp  stfm.cpp  swapmatr.cpp  tulips.cpp
codeforces/: 1000e.cpp  1009f.cpp  1038e.cpp  1041f.cpp  1043e.cpp  1059e.cpp  1060d.cpp  1083e.cpp  1087a.cpp  1088e.cpp  1106e.cpp  115a.cpp  118a.cpp  1200e.cpp  1204e.cpp  1208f.cpp  1217f.cpp  1228a.cpp  1250G.cpp  126a.cpp  1278f.cpp  1283e.cpp  128c.cpp  131a.cpp  1348a.cpp  13e.cpp  1416d.cpp  1423m.cpp  148d.cpp  1498a.cpp  156c.cpp  158b.cpp  1628e.cpp  165e.cpp  1706e.cpp  185d.cpp  1862e.cpp  204c.cpp  208e.cpp  213c.cpp  (+136 more)
csacademy/: Balkan_17_CityAttractions.cpp  CEOI_18_Cloud.cpp  CEOI_18_Lottery.cpp  RMI_17-D1-Hangman2.cpp  odd_divisors.cpp  path_inversions.cpp
cses/: 2413.cpp  Baltic_08_Grid.cpp  Baltic_09_Beetles.cpp  Baltic_09_Triangulation.cpp  Baltic_10_Lego.cpp  Baltic_11_Vikings.cpp  Baltic_12_melody.cpp  CEOI_05_TIcket.cpp
dmoj/: APIO_12_Dispatching.cpp  CCO_18_Boring.cpp  CEOI_17_Chase.cpp  COCI_08_Najkraci.cpp  COCI_09_Ograda.cpp  COCI_15_Savez.cpp  UTSOpen_15_Pogo.cpp  aac1p4.cpp  cco21p1.cpp  cco21p2.cpp  coci07c5p6.cpp  ioi14p6io.cpp  ioi18p3.cpp  mmcc15p1.cpp
dunjudge/: APIO_08_dna.cpp  COCI_09_snowwhite.cpp  COCI_13_Parovi.cpp  IOIPractice_17_Coins.cpp  TOKIOpen_18_GroupChat.cpp
eolymp/: 22.cpp  3733.cpp  383.cpp  3968.cpp
gym/: 100199c.cpp  100200b.cpp  100430j.cpp  100488l.cpp  100676h.cpp  100712h.cpp  100814c.cpp  100886h.cpp  101741k.cpp  102021m.cpp  102396c.cpp  102576b.cpp  102586a.cpp  299539a.cpp  299539b.cpp
hackerrank/: Balkan_16_Conference.cpp  divisor-exploration-3.cpp  euler003.cpp  euler007.cpp  euler010.cpp  maximum-gcd-and-sum.cpp  separate_the_numbers.cpp  sherlock-and-queries-on-the-graph.cpp  subset.cpp  tree-pruning.cpp  vim-war.cpp
hdu/: 1000.cpp  1004.cpp  1005.cpp  1012.cpp  1013.cpp  1014.cpp  1029.cpp  1059.cpp  1096.cpp  1159.cpp  1171.cpp  1238.cpp  1300.cpp  1520.cpp  1557.cpp  1562.cpp  2824.cpp  2829.cpp  2993.cpp  3507.cpp  3586.cpp  4276.cpp  4359.cpp  4370.cpp  4632.cpp  5414.cpp  5427.cpp  5742.cpp  6300.cpp  6315.cpp  6321.cpp  6322.cpp  6324.cpp  6329.cpp  6351.cpp  6693.cpp  6695.cpp  6699.cpp  6701.cpp  7457.cpp
infoarena/: arb.cpp  arb3.cpp  avarcolaci.cpp  balulbobocilor.cpp  base3.cpp  ben.cpp  charlie.cpp  culori3.cpp  dbz.cpp  eq.cpp  flori.cpp  freakadebunic.cpp  graf.cpp  huffman.cpp  inel.cpp  ioi13_robots.cpp  kdtree.cpp  mexc.cpp  mexitate.cpp  numerologie.cpp  patrate3.cpp  permsort2.cpp  permutariab.cpp  prefix.cpp  scmax.cpp  sdo.cpp  sediu.cpp  sormin.cpp  sum2.cpp  text3.cpp  vampir.cpp
kattis/: 2048.cpp  Baltic_17_Railway.cpp  anewalphabet.cpp  bigtruck.cpp  brackets.cpp  bumped.cpp  canonical.cpp  catandmice.cpp  companypicnic.cpp  countingstars.cpp  genetics2.cpp  glitchbot.cpp  greetingcard.cpp  inversefactorial.cpp  knightsearch.cpp  mububa.cpp  ninepacks.cpp  oddgnome.cpp  particles.cpp  pivot.cpp  quickestimate.cpp  robotopia.cpp  suspensionbridges.cpp  tutorial.cpp  umbraldecoding.cpp  visualgo.cpp  zbrka.cpp
libreoj/: 528.cpp  6160.cpp  6181.cpp  6244.cpp
lightoj/: 1035.cpp  1042.cpp  1045.cpp  1054.cpp  1063.cpp  1080.cpp  1088.cpp  1116.cpp  1117.cpp  1124.cpp  1148.cpp  1189.cpp  1215.cpp  1259.cpp  1291.cpp  1300.cpp  1308.cpp  1429.cpp
oj.uz/: APIO_15_Skiscraper.cpp  Baltic_13_Brunhilda.cpp  Baltic_15_Net.cpp  CEOI_13_Treasure2.cpp  COCI_15_Vudu.cpp  COCI_17_Rima.cpp  COCI_19_Strah.cpp  IOI_11_Crocodrile.cpp  IOI_13_dreaming.cpp  IOI_14_Friend.cpp  IZHO_12_Biochips.cpp  IZHO_18_Treearray.cpp  JOISC_19_Mergers.cpp  JOI_17_joioi.cpp  POI_11_conductor.cpp  ioi_16_paint.cpp  ioi_17_mountains.cpp  ruka.cpp
ojuz/: joi18_commuter_pass.cpp
openj_bailian/: 2374.cpp
poj/: 1039.cpp  1061.cpp  (+44 more)
(+170 files in other folders)
