cmake_minimum_required(VERSION 3.17)
project(CompetitiveProgramming)

set(CMAKE_CXX_STANDARD 17)

include_directories(dunjudge/median)
include_directories(oj.uz/garden)

add_executable(CompetitiveProgramming
        A2OJ/29371/A.cpp
        A2OJ/29371/B.cpp
        A2OJ/29371/C.cpp
        A2OJ/29371/D.cpp
        A2OJ/29371/E.cpp
        A2OJ/29371/F.cpp
        A2OJ/29371/G.cpp
        A2OJ/29371/H.cpp
        A2OJ/29371/I.cpp
        A2OJ/29371/J.cpp
        A2OJ/greedy/A.cpp
        A2OJ/greedy/B.cpp
        A2OJ/greedy/C.cpp
        A2OJ/greedy/E.cpp
        A2OJ/greedy/F.cpp
        A2OJ/greedy/H.cpp
        A2OJ/greedy/J.cpp
        A2OJ/greedy/K.cpp
        atcoder/AtCoder011-AGC-D.cpp
        atcoder/AtCoder012-AGC-D.cpp
        atcoder/AtCoder013-AGC-D.cpp
        atcoder/AtCoder019-AGC-D.cpp
        atcoder/AtCoder103-ARC-D.cpp
        atcoder/AtCoder103-ARC-F.cpp
        atcoder/Atcoder149-ABC-F.cpp
        atcoder/Atcoder160-ABC-F.cpp
        atcoder/AtcoderEduDP-V.cpp
        baekjoon/Balkan_12_Fan_groups.cpp
        baekjoon/CEOI-02-fence.cpp
        balkan/12-ShortestPaths.cpp
        balkan/Balkang_09_Reading.cpp
        camp/dynamic_programming/C.cpp
        code/bitset.cpp
        code/determinante.cpp
        Codechef/ACM_ICPC_ASIA/A.cpp
        Codechef/ACM_ICPC_ASIA/B.cpp
        Codechef/ACM_ICPC_ASIA/C.cpp
        Codechef/ACM_ICPC_ASIA/D.cpp
        Codechef/ACM_ICPC_ASIA/E.cpp
        Codechef/ALK1104.cpp
        Codechef/BASE.cpp
        Codechef/CHAHG.cpp
        Codechef/CHCHCL.cpp
        Codechef/CHEFCRUN.cpp
        Codechef/CHEFRRUN.cpp
        Codechef/CHFNFRN.cpp
        Codechef/free_ticket.cpp
        Codechef/GTH.cpp
        Codechef/hc.cpp
        Codechef/MARBLEGF.cpp
        Codechef/MAXGRID.cpp
        Codechef/MAXGRID_2.cpp
        Codechef/periodic_string.cpp
        Codechef/PRIMEDST.cpp
        Codechef/REDBLUE.cpp
        Codechef/sequence_land.cpp
        Codechef/sequence_land2.cpp
        Codechef/SHAIKHGN.cpp
        Codechef/SHAIKHGN_2.cpp
        Codechef/triathlon.cpp
        Codechef/TRIQUERY.cpp
        codeforces/100004/A.cpp
        codeforces/100004/B.cpp
        codeforces/100004/C.cpp
        codeforces/100004/D.cpp
        codeforces/100004/E.cpp
        codeforces/100004/F.cpp
        codeforces/100004/G.cpp
        codeforces/100004/H.cpp
        codeforces/100004/I.cpp
        codeforces/100993/A.cpp
        codeforces/100993/B.cpp
        codeforces/100993/C.cpp
        codeforces/100993/D.cpp
        codeforces/100993/E.cpp
        codeforces/100993/F.cpp
        codeforces/100993/G.cpp
        codeforces/100993/H.cpp
        codeforces/240/A.cpp
        codeforces/240/B.cpp
        codeforces/240/C.cpp
        codeforces/240/D.cpp
        codeforces/240/E.cpp
        codeforces/378/A.cpp
        codeforces/378/B.cpp
        codeforces/378/C.cpp
        codeforces/378/d.cpp
        codeforces/380/A.cpp
        codeforces/380/B.cpp
        codeforces/380/C.cpp
        codeforces/380/D.cpp
        codeforces/380/E.cpp
        codeforces/381/A.cpp
        codeforces/381/B.cpp
        codeforces/381/C.cpp
        codeforces/381/D.cpp
        codeforces/382/A.cpp
        codeforces/382/B.cpp
        codeforces/382/C.cpp
        codeforces/382/D.cpp
        codeforces/383/A.cpp
        codeforces/383/B.cpp
        codeforces/383/D.cpp
        codeforces/384/A.cpp
        codeforces/384/B.cpp
        codeforces/384/C.cpp
        codeforces/384/D.cpp
        codeforces/387/A.cpp
        codeforces/387/B.cpp
        codeforces/387/C.cpp
        codeforces/387/D.cpp
        codeforces/387/E.cpp
        codeforces/388/A.cpp
        codeforces/388/B.cpp
        codeforces/388/C.cpp
        codeforces/388/D.cpp
        codeforces/393/A.cpp
        codeforces/393/B.cpp
        codeforces/393/C.cpp
        codeforces/394/A.cpp
        codeforces/394/B.cpp
        codeforces/394/C.cpp
        codeforces/394/D.cpp
        codeforces/394/E.cpp
        codeforces/394/F.cpp
        codeforces/395/A.cpp
        codeforces/395/B.cpp
        codeforces/395/C.cpp
        codeforces/395/D.cpp
        codeforces/395/E.cpp
        codeforces/395/F.cpp
        codeforces/396/A.cpp
        codeforces/396/B.cpp
        codeforces/396/C.cpp
        codeforces/396/D.cpp
        codeforces/396/E.cpp
        codeforces/396/F.cpp
        codeforces/397/A.cpp
        codeforces/397/B.cpp
        codeforces/397/C.cpp
        codeforces/397/D.cpp
        codeforces/399/A.cpp
        codeforces/399/B.cpp
        codeforces/399/C.cpp
        codeforces/399/D.cpp
        codeforces/399/E.cpp
        codeforces/399/G.cpp
        codeforces/400/A.cpp
        codeforces/400/B.cpp
        codeforces/400/C.cpp
        codeforces/400/D.cpp
        codeforces/400/E.cpp
        codeforces/400/F.cpp
        codeforces/400/G.cpp
        codeforces/good_bye_2016/A.cpp
        codeforces/good_bye_2016/B.cpp
        codeforces/good_bye_2016/C.cpp
        codeforces/good_bye_2016/D.cpp
        codeforces/good_bye_2016/E.cpp
        codeforces/good_bye_2016/F.cpp
        codeforces/good_bye_2016/G.cpp
        codeforces/good_bye_2016/H.cpp
        codeforces/good_bye_2016/I.cpp
        codeforces/indiaHacks_2016/653A_bear_and_three_balls.cpp
        codeforces/indiaHacks_2016/653B_bear_and_compressing.cpp
        codeforces/101055.cpp
        codeforces/101055A.cpp
        codeforces/101055F.cpp
        codeforces/1064_binary_search.cpp
        codeforces/106C_buns.cpp
        codeforces/112A_petya_and_strings.cpp
        codeforces/114B_PFAST_inc.cpp
        codeforces/116A_tram.cpp
        codeforces/118A_String_Task.cpp
        codeforces/118B_present_from_lena.cpp
        codeforces/11D.cpp
        codeforces/122A_lucky_division.cpp
        "codeforces/124A_the_number posicion.cpp"
        codeforces/124B_permutations.cpp
        codeforces/148A_insomnia_cure.cpp
        codeforces/166E.cpp
        codeforces/177A2_good_matrix_elements.cpp
        codeforces/189A_cut_ribbon.cpp
        codeforces/189B.cpp
        codeforces/1_650A_watchmen.cpp
        codeforces/225A.cpp
        codeforces/231A_team.cpp
        codeforces/236A_boy_or_girl.cpp
        codeforces/244B_undoubtedly_lucky_numbers.cpp
        codeforces/25A_iq_test.cpp
        codeforces/263A_beautyfull_matrix.cpp
        codeforces/276.cpp
        codeforces/276B_maximum_value.cpp
        codeforces/289B.cpp
        codeforces/334A_candy_bags.cpp
        codeforces/337D_book_of_evil.cpp
        codeforces/339A_helpful_maths.cpp
        codeforces/349A_cinema_line.cpp
        codeforces/362A_two_semiknights_meet.cpp
        codeforces/370A_rook,_bishop_and_king.cpp
        codeforces/371C.cpp
        codeforces/378A_playing_with_dice.cpp
        codeforces/379A.cpp
        codeforces/379B.cpp
        codeforces/379C.cpp
        codeforces/379D.cpp
        codeforces/379E.cpp
        codeforces/379F.cpp
        codeforces/390A_inna_and_alarm_clock.cpp
        codeforces/390B_inna,_dimma_and_song.cpp
        codeforces/390C_inna_and_candy_boxxes.cpp
        codeforces/390D_inna_and_sweet_matrix.cpp
        codeforces/390D_inna_and_sweet_matrix_2.cpp
        codeforces/407A_triangle.cpp
        codeforces/407B_long_path.cpp
        codeforces/408A_line_to_cashier.cpp
        codeforces/408B_garland.cpp
        codeforces/418D.cpp
        codeforces/41A_translation.cpp
        codeforces/424A_squats.cpp
        codeforces/43B_letter.cpp
        codeforces/440A_forgotten_episode.cpp
        "codeforces/443A_Anton and Letters.cpp"
        codeforces/445B_DZY_loves_chemistry.cpp
        codeforces/446C_dzy_loves_fibonacci_numbers.cpp
        "codeforces/451A _game_with_sticks.cpp"
        codeforces/451A_game_with_sticks.cpp
        codeforces/451B_sort_the_array.cpp
        codeforces/455A_boderom.cpp
        codeforces/459A_pahsmak_and_garden.cpp
        codeforces/463B_caisa_and_pylons.cpp
        codeforces/466A_cheap_travel.cpp
        codeforces/466B_wonder_room.cpp
        codeforces/467B_fedor_and_new_game.cpp
        codeforces/469A_i_wanna_be_the_guy.cpp
        codeforces/476A_dreamoon_and_stairs.cpp
        codeforces/478C_table_decorations.cpp
        codeforces/479A_expression.cpp
        codeforces/485A.cpp
        codeforces/492B.cpp
        codeforces/4A_watermelon.cpp
        codeforces/500B.cpp
        codeforces/507B_amr_and_pins.cpp
        codeforces/507C_guess_your_way_out!.cpp
        codeforces/50A_domino_piling.cpp
        codeforces/515A_drazil_an_date.cpp
        codeforces/519A_a_and_b_and_chess.cpp
        codeforces/519B_a_and_b_and_compilation_erros.cpp
        codeforces/52C.cpp
        codeforces/535B_tavas_ans_saddas.cpp
        codeforces/550A_two_substrings.cpp
        codeforces/552A_vanya_and_table.cpp
        codeforces/555B_case_of_fugitive.cpp
        codeforces/558A_lala_land_and_apple_trees.cpp
        codeforces/570A_elections.cpp
        codeforces/572A_arrays.cpp
        codeforces/572B_order_book.cpp
        codeforces/577B_modulo_sum.cpp
        codeforces/578C.cpp
        codeforces/593A_2char.cpp
        codeforces/599A_patrick_and_shopping.cpp
        codeforces/600C_make_palindrome.cpp
        codeforces/601A_the_two_routes.cpp
        codeforces/601A_the_two_routes_2.cpp
        codeforces/603A_alternative_thinking.cpp
        codeforces/605A_sorting_railway_cars.cpp
        codeforces/609A_usb_flash_driver.cpp
        codeforces/609B_the_best_gift.cpp
        codeforces/609C_load_balancing.cpp
        codeforces/612A_the_text_splitting.cpp
        codeforces/612B_hdd_is_outdated_technology.cpp
        codeforces/614A_link__cut_tree.cpp
        codeforces/615A_bulbs.cpp
        codeforces/616A.cpp
        codeforces/616B.cpp
        codeforces/616C.cpp
        codeforces/616D.cpp
        codeforces/618C_constellation.cpp
        codeforces/622A.cpp
        codeforces/622B.cpp
        codeforces/622C.cpp
        codeforces/628A_tennis_tournament.cpp
        codeforces/628B_nuevo_monopat'in.cpp
        codeforces/628C_bear_and_string_distance.cpp
        codeforces/629A_far_relative's_birthday_cake.cpp
        codeforces/629B_far_relative's_problem.cpp
        codeforces/630C_lucky_numbers.cpp
        codeforces/630J_divisibility.cpp
        codeforces/632B_Alice_bob,_two_teams.cpp
        codeforces/633A_ebony_and_ivory.cpp
        codeforces/633A_ebony_and_ivory_2.cpp
        codeforces/633A_enlace_corte_del_arbol.cpp
        codeforces/652A.cpp
        codeforces/652B.cpp
        codeforces/652C.cpp
        codeforces/652D.cpp
        codeforces/653B_bear_and_compressing.cpp
        codeforces/675A_infinite_sequence.cpp
        codeforces/682A.cpp
        codeforces/682B.cpp
        codeforces/682C.cpp
        codeforces/696_how_many_knights.cpp
        codeforces/699A.cpp
        codeforces/699B.cpp
        codeforces/699C.cpp
        codeforces/699D.cpp
        codeforces/709D.cpp
        codeforces/716A.cpp
        codeforces/716B.cpp
        codeforces/716C.cpp
        codeforces/71A_a_way_too_long_words.cpp
        codeforces/721A.cpp
        codeforces/721B.cpp
        codeforces/722D_generating_sets.cpp
        codeforces/74A_room_leader.cpp
        codeforces/75C_modified_gcd.cpp
        codeforces/96A_turing_tape.cpp
        codeforces/A_i_love_username.cpp
        codeforces/A_strong_parentheses_sequence.cpp
        codeforces/B1_permutations.cpp
        codeforces/B_lucky_transformation.cpp
        codeforces/B_queruies_about_less_or_equal_elements.cpp
        codeforces/B_retrospective_sequence.cpp
        codeforces/B_robots_task.cpp
        codeforces/B_shift_and_push.cpp
        codeforces/C_gangsters.cpp
        codeforces/C_hard_process.cpp
        codeforces/C_power.cpp
        codeforces/CDF2-D12-C.cpp
        codeforces/CF100402-GYM-K.cpp
        codeforces/CF1092-D2-F.cpp
        codeforces/CF1182-D2-E.cpp
        codeforces/CF1187-D2-E.cpp
        codeforces/CF1188B-D1-B.cpp
        codeforces/CF1204-D2-E.cpp
        codeforces/CF1218-D1-I.cpp
        codeforces/CF1234-D3-F.cpp
        codeforces/CF124-D2-E.cpp
        codeforces/CF1267-NERC-Eurasia-K.cpp
        codeforces/CF1278_eduF.cpp
        codeforces/CF1324-D2-F.cpp
        codeforces/CF161-VKCUP-R1-D.cpp
        codeforces/CF245-D12-H.cpp
        codeforces/CF254766-GYM-K.cpp
        codeforces/CF342-D2-E.cpp
        codeforces/CF461-D1-B.cpp
        codeforces/CF469-D2-D.cpp
        codeforces/CF500-D12-E.cpp
        codeforces/CF55-D12-D.cpp
        codeforces/CF620-D12-E.cpp
        codeforces/CF689-D2-D.cpp
        codeforces/CF7-D12-D.cpp
        codeforces/CF714-D2-D.cpp
        codeforces/CF834-D2-D.cpp
        codeforces/CF868-D12-F.cpp
        codeforces/CF960-D12-E.cpp
        codeforces/D_number_of_parallelograms.cpp
        codeforces/D_triangle_formation.cpp
        codeforces/E_wet_shark_and_blocks.cpp
        codeforces/F_minimize_tree.cpp
        codeforces/H_words_from_cubes.cpp
        codeforces/mmatrix.cpp
        CPUNI/bitmask_1_soluciones.cpp
        csacademy/Balkan_17_CityAttractions.cpp
        csacademy/CEOI_18_Cloud.cpp
        csacademy/path_inversions.cpp
        csacademy/RMI_17-D1-Hangman2.cpp
        csacademy/ROJS_17-cntgigelmat.cpp
        csacademy/ROJS_17_borland.cpp
        cses/Baltic_08_Grid.cpp
        cses/Baltic_09_Beetles.cpp
        cses/Baltic_09_Triangulation.cpp
        cses/Baltic_10_Lego.cpp
        cses/Baltic_11_Vikings.cpp
        cses/Baltic_12-Peaks.cpp
        cses/Baltic_12_melody.cpp
        cses/CEOI_05_TIcket.cpp
        cses/CEOI_08-Knihgts.cpp
        cses/CEOI_16-router.cpp
        cses/CEOI_19-Logs.cpp
        dmoj/APIO_12_Dispatching.cpp
        dmoj/CCO_18_Boring.cpp
        dmoj/CEOI_17_Chase.cpp
        dmoj/COCI_08_Najkraci.cpp
        dmoj/COCI_08_trezor.cpp
        dmoj/COCI_09_Ograda.cpp
        dmoj/COCI_15_Savez.cpp
        dmoj/COCI_15_Slon.cpp
        dmoj/UTSOpen_15_Pogo.cpp
        dunjudge/inheritance/inheritance.cpp
        dunjudge/median/ans.cpp
        dunjudge/median/device.h
        dunjudge/median/grader.cpp
        dunjudge/APIO_08_dna.cpp
        dunjudge/COCI_09_snowwhite.cpp
        dunjudge/COCI_13_Parovi.cpp
        dunjudge/IOIPractice_17_Coins.cpp
        dunjudge/MCO_16-acorn.cpp
        dunjudge/NOI_17_RMQ.cpp
        dunjudge/TOKIOpen_18_GroupChat.cpp
        e-olymp/1303.cpp
        e-olymp/2379.cpp
        e-olymp/4142.cpp
        e-olymp/4261.cpp
        e-olymp/6828.cpp
        e-olymp/7031.cpp
        e-olymp/8735.cpp
        e-olymp/9088.cpp
        e-olymp/9098.cpp
        e-olymp/973.cpp
        FbHkrCup/2017/A.cpp
        FbHkrCup/2017/B.cpp
        FbHkrCup/2017/C.cpp
        FbHkrCup/2017/D.cpp
        FbHkrCup/2017/ta.cpp
        FbHkrCup/2018/18-R1-A.cpp
        FbHkrCup/2018/18-R1-B.cpp
        FbHkrCup/2018/18-R1-C.cpp
        FbHkrCup/AA.cpp
        FbHkrCup/AA2.cpp
        FbHkrCup/AR1.cpp
        FbHkrCup/CC.cpp
        FbHkrCup/CR1.cpp
        FbHkrCup/DR1.cpp
        FHC/2017/A.cpp
        FHC/2017/B.cpp
        FHC/2017/C.cpp
        FHC/2017/D.cpp
        FHC/2017/ta.cpp
        FHC/AA.cpp
        FHC/AA2.cpp
        FHC/AR1.cpp
        FHC/CC.cpp
        FHC/CR1.cpp
        FHC/DR1.cpp
        hackerearth/MarchClass15-CountingOnTree1.cpp
        hackerrank/infinitum17/A.cpp
        hackerrank/infinitum17/B.cpp
        hackerrank/infinitum17/C.cpp
        hackerrank/infinitum17/D.cpp
        hackerrank/infinitum17/E.cpp
        hackerrank/Balkan_16_Conference.cpp
        hackerrank/breaking_the_records.cpp
        hackerrank/dog_walking.cpp
        hackerrank/Equal.cpp
        hackerrank/flower_games.cpp
        hackerrank/game_of_two_stacks.cpp
        hackerrank/hyperspace_travel.cpp
        hackerrank/inti_sets.cpp
        hackerrank/leonardo's_prime_factors.cpp
        hackerrank/minimum_mst_graph.cpp
        hackerrank/minimum_mst_graph_2.cpp
        hackerrank/mouse_vs_mouse.cpp
        hackerrank/mst.cpp
        hackerrank/mysterious_maze.cpp
        hackerrank/n_palindromes.cpp
        hackerrank/painters_dilemma.cpp
        hackerrank/parallelogram_connectivity.cpp
        hackerrank/parallelogram_connectivity_2.cpp
        hackerrank/parallelogram_connectivity_3.cpp
        hackerrank/playing_20.cpp
        hackerrank/querying_sums_on_strings.cpp
        hackerrank/russian_peasant_exponentiation.cpp
        hackerrank/separate_the_numbers.cpp
        hackerrank/Sherlock_and_cost.cpp
        hackerrank/sherlocks_array_merging_algorithm.cpp
        hackerrank/solve_equations.cpp
        hackerrank/sum2.cpp
        hackerrank/sum3.cpp
        hackerrank/sum_of_remainders.cpp
        hackerrank/the_story_of_a_tree.cpp
        hackerrank/tree_pruning.cpp
        hackerrank/Vertical_sticks.cpp
        hackerrank/xrange'_pancakes.cpp
        HACKR/BILLBOARDS.cpp
        HACKR/meeting_point.cpp
        HDU/4625.cpp
        infoarena/amici2.cpp
        infoarena/arb.cpp
        infoarena/Fibo4.cpp
        infoarena/interact.cpp
        infoarena/karb.cpp
        infoarena/lcdr.cpp
        infoarena/password2.cpp
        infoarena/permsort.cpp
        infoarena/permsort2.cpp
        infoarena/pitici3.cpp
        infoarena/plimbare3.cpp
        infoarena/retea3.cpp
        infoarena/sormin.cpp
        ITMO/A.cpp
        ITMO/B.cpp
        ITMO/D.cpp
        ITMO/E.cpp
        ITMO/F.cpp
        kattis/A.cpp
        kattis/B.cpp
        kattis/Baltic_17_Railway.cpp
        kattis/C.cpp
        kattis/D.cpp
        kattis/E.cpp
        kattis/F.cpp
        kattis/G.cpp
        kattis/H.cpp
        kattis/Kamp.cpp
        kattis/nuremberg.cpp
        live_archive/2481_silly_sort.cpp
        live_archive/2481_silly_sort_fast.cpp
        live_archive/2942.cpp
        live_archive/2942_2.cpp
        live_archive/2942_3.cpp
        live_archive/4787.cpp
        live_archive/4976.cpp
        live_archive/6436_the_busiest_city.cpp
        live_archive/7205.cpp
        live_archive/7205_2.cpp
        live_archive/7225.cpp
        live_archive/7225_2.cpp
        live_archive/7225_summation_and_divisor.cpp
        LOJ/528.cpp
        LOJ/6160.cpp
        LOJ/6181.cpp
        LOJ/6244.cpp
        oj.uz/garden/garden.c
        oj.uz/garden/garden.cpp
        oj.uz/garden/garden.h
        oj.uz/garden/gardenlib.h
        oj.uz/garden/grader.c
        oj.uz/garden/grader.cpp
        oj.uz/APIO_15_Skiscraper.cpp
        oj.uz/Baltic_13-pipes.cpp
        oj.uz/Baltic_13_Brunhilda.cpp
        oj.uz/Baltic_15_Net.cpp
        oj.uz/Baltic_19-valley.cpp
        oj.uz/BOI19_nautilus.cpp
        oj.uz/CEOI_13_Treasure2.cpp
        oj.uz/COC_18_dostavljac.cpp
        oj.uz/COCI_15_Vudu.cpp
        oj.uz/COCI_16_Mag.cpp
        oj.uz/COCI_17-ceste.cpp
        oj.uz/COCI_17_Rima.cpp
        oj.uz/COCI_18_Pictionary.cpp
        oj.uz/COCI_18_planinarenje.cpp
        oj.uz/COCI_19_Strah.cpp
        oj.uz/COI-16-torrent.cpp
        oj.uz/IOI_11_Crocodrile.cpp
        oj.uz/IOI_13_dreaming.cpp
        oj.uz/IOI_13_robots.cpp
        oj.uz/IOI_14_Friend.cpp
        oj.uz/IOI_14_game.cpp
        oj.uz/ioi_16_paint.cpp
        oj.uz/ioi_17_mountains.cpp
        oj.uz/IZHO_12_Biochips.cpp
        oj.uz/IZHO_14_blocks.cpp
        oj.uz/IZHO_14_Shymbulak.cpp
        oj.uz/IZHO_18_plan.cpp
        oj.uz/IZHO_18_Treearray.cpp
        oj.uz/JOI_17_joioi.cpp
        oj.uz/JOISC_19_Mergers.cpp
        oj.uz/krave.cpp
        oj.uz/museum.cpp
        oj.uz/Olympiads.cpp
        oj.uz/POI_11_conductor.cpp
        oj.uz/ruka.cpp
        Olympiads/OII_18_Cena.cpp
        POJ/1887_testing_the_catcher.cpp
        POJ/1925_spiderman.cpp
        POJ/2152.cpp
        POJ/mediam.cpp
        project_euler/10001st_prime.cpp
        project_euler/10001st_prime_2.cpp
        project_euler/even_fibonacci_number.cpp
        project_euler/largest_palindrome_product.cpp
        project_euler/largest_prime_factor.cpp
        project_euler/largest_product_in_a_series.cpp
        project_euler/multiples_of_3_and_5.cpp
        project_euler/smallest_multiple.cpp
        project_euler/sum_square_difference.cpp
        RPC/A.cpp
        RPC/B.cpp
        RPC/C.cpp
        RPC/D.cpp
        RPC/E.cpp
        RPC/F.cpp
        RPC/G.cpp
        RPC/H.cpp
        RPC/hardcode.cpp
        RPC/I.cpp
        RPC/J.cpp
        RPC/K.cpp
        RPC/L.cpp
        RPC/two.cpp
        spoj/550B_preparing_olympiad.cpp
        spoj/AGGRCOW.cpp
        spoj/AMBM.cpp
        spoj/ASSIGN_assignments.cpp
        spoj/B_T2011_black_and_white.cpp
        spoj/BOMBER.cpp
        spoj/BRICKS.cpp
        spoj/BUGLIFE.cpp
        spoj/C.cpp
        spoj/C_T2013_Little_red_cap.cpp
        spoj/CTRICK.cpp
        spoj/FASTFLOW.cpp
        spoj/FNRANK_rank_of_a_fraction.cpp
        spoj/GSS1.cpp
        spoj/GSS2.cpp
        spoj/HORRIBLE.cpp
        spoj/IE1_sweets.cpp
        spoj/IE2_journey.cpp
        spoj/IE3_non_square_free_numbers.cpp
        spoj/INCDSEQ.cpp
        spoj/INCSEQ.cpp
        spoj/INTEGMAX.cpp
        spoj/INVCNT.cpp
        spoj/IOPC2017.cpp
        spoj/MTRIAREA_maximum_triangle_area.cpp
        spoj/NGM2_another_game_whit_numbers.cpp
        spoj/NICEDAY.cpp
        spoj/NKMARS.cpp
        spoj/PERMUT1.cpp
        spoj/PESADA09_find_if_the_binary_search_tree_an_avl_tree.c
        spoj/PGCD_primes_in_gcd_table.cpp
        spoj/POLYNOM_polynomial.cpp
        spoj/qtree5.cpp
        spoj/SQFREE_square_free_integers.cpp
        spoj/SUBST1_new_distinct_substrings.cpp
        spoj/SUBST1_new_distinct_substrings_2.cpp
        spoj/SUMITR.cpp
        spoj/TREEISO.cpp
        spoj/YODANESS.cpp
        spoj/ZOO.cpp
        szkoput/CEOI_10_Tower.cpp
        szkoput/POI-04-Maximal.cpp
        szkoput/POI-04-tournament.cpp
        szkoput/POI-05-Double-Row.cpp
        szkoput/POI-05-Fibonacci.cpp
        szkoput/POI-06-Invasion.cpp
        szkoput/POI-07-Pipelines.cpp
        szkoput/POI-07-Tetris.cpp
        szkoput/POI-08-BBB.cpp
        szkoput/POI-09-Walk.cpp
        szkoput/POI-10-Beads.cpp
        szkoput/POI-14-Bricks.cpp
        szkoput/POI-14-Farmcraft.cpp
        szkoput/POI_04-East-West.cpp
        szkoput/POI_04_Passage.cpp
        szkoput/POI_05_Banknote.cpp
        szkoput/POI_07-Weights.cpp
        szkoput/POI_10-Sheep.cpp
        szkoput/POI_10_sums.cpp
        szkoput/POI_12-Festival.cpp
        szkoput/POI_12-salaries.cpp
        szkoput/POI_12_Gluttons.cpp
        szkoput/POI_14-Panels.cpp
        szkoput/poi_14_couriers.cpp
        szkoput/POI_15_Trous.cpp
        TC/SRM386-D2-1000.cpp
        TC/SRM393-D2-1000.cpp
        timus/1005_stone_pile.cpp
        timus/1018.cpp
        timus/1039.cpp
        timus/1060_4.cpp
        timus/1060_flip_game.cpp
        timus/1060_flip_game_2.cpp
        timus/1060_flip_game_3.cpp
        timus/1064_binary_search.cpp
        timus/1119_metro.cpp
        timus/1225.cpp
        timus/1470_ufos.cpp
        TJU/1178_Fractal.cpp
        TJU/1208_fibonacci_numbers_tju.cpp
        TJU/1226_painting_a_board.cpp
        TJU/1406_the_sierpinski_fractal.cpp
        TJU/2344.cpp
        TJU/3484_stones.cpp
        TJU/3488.cpp
        toki/taming_a_bomb.cpp
        topcoder/CreatureTraining.cpp
        topcoder/QuizShow.cpp
        topcoder/sorryMarco.cpp
        topcoder/SRM468-D1-500.cpp
        topcoder/SRM469-D1-1000.cpp
        topcoder/TCOpen2008-D1-500.cpp
        topcoder/weid_locations.cpp
        Usaco/16feb_Balancing_plat.cpp
        Usaco/17jansubrev-plat.cpp
        Usaco/cow_hopscotch.cpp
        Usaco/dec17_platinum3.cpp
        Usaco/feb16_fencedin_plat.cpp
        Usaco/feb17_platinum3.cpp
        Usaco/feb_15_gold2.cpp
        Usaco/Gold_19mar_Balancing.cpp
        Usaco/jan18_lifeguards_plat.cpp
        Usaco/jan20_gold2.cpp
        Usaco/USACO_17jan_tallbarn_plat.cpp
        Usaco/You_ride_is_here.cpp
        UVA/01225_digit_counting.cpp
        UVA/10005.cpp
        UVA/10020_minimal_coverage.cpp
        UVA/10025_the123nproblem.cpp
        UVA/10038_jolly_jumpers.cpp
        UVA/10041-vitos_family.cpp
        UVA/10055.cpp
        UVA/10071.cpp
        UVA/10077.cpp
        UVA/10088_Trees_on_my_island.cpp
        UVA/100_the_3n+1_problem.cpp
        UVA/10114_loansome_car_buyer.cpp
        UVA/10125-Sumsets.cpp
        UVA/10141_request_for_proposal.cpp
        UVA/10150.cpp
        UVA/10167_birthday_cake.cpp
        UVA/10179-Irreducable_Basic_Fractions.cpp
        UVA/10189_Minesweeper.cpp
        UVA/10209.cpp
        UVA/10258_contest_scoreboard.cpp
        UVA/10260_soundex.cpp
        UVA/10263.cpp
        UVA/10264_the_most_potent_corner.cpp
        UVA/10281.cpp
        UVA/10284_chessboard_in_fen.cpp
        UVA/10299_relatives.cpp
        UVA/10305_ordering_tasks.cpp
        UVA/10324_zeros_and_ones.cpp
        UVA/10341.cpp
        UVA/10365-Blocks.cpp
        UVA/10385.cpp
        UVA/10422.cpp
        UVA/10445.cpp
        UVA/10452_marcus.cpp
        UVA/10469.cpp
        UVA/10474.cpp
        UVA/10514.cpp
        UVA/10550_combination_lock.cpp
        UVA/10611.cpp
        UVA/1064_binary_search.cpp
        UVA/10653.cpp
        UVA/10696_f91.cpp
        UVA/10706_number_sequence.cpp
        UVA/10706_number_sequence2.cpp
        UVA/10709.cpp
        UVA/10773.cpp
        UVA/10783_odd_sum.cpp
        UVA/10807.cpp
        UVA/10827.cpp
        UVA/10827_2.cpp
        UVA/10868_bungee_jumping.cpp
        UVA/10887_concatenation_of_languages.cpp
        UVA/10895_matrix_transpose.cpp
        UVA/10902.cpp
        UVA/10911_forming_quiz_teams.cpp
        UVA/10922_2_the_9s.cpp
        UVA/10928_my_dear_neigbours.cpp
        UVA/10994_simple_addition.cpp
        UVA/11028.cpp
        UVA/11038.cpp
        UVA/1103_ancient_messages.cpp
        UVA/11044_searching_for_nessy.cpp
        UVA/11057_2.cpp
        UVA/11057_exact_sum.cpp
        UVA/11085_back_to_the_8_queens.cpp
        UVA/11090.cpp
        UVA/11093_just_finish_it_up.cpp
        UVA/1112_mice_and_maze.cpp
        UVA/11150_cola.cpp
        UVA/11172_relational_operator.cpp
        UVA/11173_grey_codes.cpp
        UVA/11173_grey_codes2.cpp
        UVA/11221_magic_square_palindromes.cpp
        UVA/11246_k_multiple_free_set.cpp
        UVA/1124_celebrity_jeopardy.cpp
        UVA/11297_census.cpp
        UVA/11314.cpp
        UVA/11340.cpp
        UVA/11364_parking.cpp
        UVA/11393.cpp
        UVA/11461_square_numbers.cpp
        UVA/11480_jimmys_balls.cpp
        UVA/11498_division_of_nlogonia.cpp
        UVA/11507_bender_b._rodriguez_problem.cpp
        UVA/11516.cpp
        UVA/11547_automatic_answer.cpp
        UVA/11550_demanding_dilemma.cpp
        UVA/11559_event_planning.cpp
        UVA/11565-simple_equations.cpp
        UVA/11572_unique_snowflakes.cpp
        UVA/11581_grid_successors.cpp
        UVA/11597_spanning_subtrees.cpp
        UVA/116.cpp
        UVA/11614.cpp
        UVA/11614_2.cpp
        UVA/11699_rooks.cpp
        UVA/11723.cpp
        UVA/11727_cost_cutting.cpp
        UVA/11760_brother_arif,_please_feed_us!.cpp
        UVA/11799_horror_dash.cpp
        UVA/11805.cpp
        UVA/11876.cpp
        UVA/11876N.cpp
        UVA/11926_multitasking.cpp
        UVA/11935.cpp
        UVA/11951.cpp
        UVA/11990.cpp
        UVA/119_greedy_gift_givers.cpp
        UVA/12003.cpp
        UVA/12149_feynman.cpp
        UVA/12198_working_at_the_restaurant.cpp
        UVA/12232_packing_for_holiday.cpp
        UVA/12250_language_detection.cpp
        UVA/12279_emoogle_balance.cpp
        UVA/12289_one_two_three.cpp
        UVA/12303.cpp
        UVA/12363.cpp
        UVA/12393.cpp
        UVA/12396.cpp
        UVA/12403_save_setu.cpp
        UVA/12407.cpp
        UVA/1241_Jollybee_tournament.cpp
        UVA/12439_february_29.cpp
        UVA/12502_three_families.cpp
        UVA/12503_robot_instructions.cpp
        UVA/12577_hajj_e_akbar.cpp
        UVA/1258.cpp
        UVA/12703_little_rakin.cpp
        UVA/136_ugly_numbers.cpp
        UVA/1468.cpp
        UVA/1476.cpp
        UVA/152.cpp
        UVA/191.cpp
        UVA/200.cpp
        UVA/200_rare_order.cpp
        UVA/216.cpp
        UVA/260_il_gioco_dell'x.cpp
        UVA/272_tex_quotes.cpp
        UVA/273.cpp
        UVA/297_quadtrees.cpp
        UVA/336_a_node_to_far.cpp
        UVA/378.cpp
        UVA/383_shipping_routes.cpp
        UVA/388_galactic_import.cpp
        UVA/4110_racing.cpp
        UVA/417_word_index.cpp
        UVA/429.cpp
        UVA/437.cpp
        UVA/437_2.cpp
        UVA/439.cpp
        UVA/441_lotto.cpp
        UVA/459_graph_connectivity.cpp
        UVA/466_mirror,_mirror.cpp
        UVA/469_wetlands_on_florida.cpp
        UVA/4721.cpp
        UVA/482_permutation_arrays.cpp
        UVA/483_word_scramble.cpp
        UVA/487_boogle_blitz.cpp
        UVA/488_triangle_wave.cpp
        UVA/527.cpp
        UVA/532.cpp
        UVA/539_the_settlers_of_catan.cpp
        UVA/541_Error_correction.cpp
        UVA/571.cpp
        UVA/573_the_snail.cpp
        UVA/588.cpp
        UVA/599_the_forest_for_the_trees.cpp
        UVA/599_the_forest_for_the_trees_2.cpp
        UVA/610.cpp
        UVA/621_secret_research.cpp
        UVA/624_cd.cpp
        UVA/673_parentheses_balance.cpp
        UVA/679.cpp
        "UVA/686_goldbach's_conjecture(II).cpp"
        UVA/725_division.cpp
        UVA/796.cpp
        UVA/836.cpp
        UVA/839_not_so_mobile.cpp
        UVA/866.cpp
        UVA/870.cpp
        UVA/871_counting_cells_in_a_blob.cpp
        UVA/928.cpp
        UVA/928_2.cpp
        UVA/929_number_maze.cpp
        UVA/960.cpp
        UVA/990.cpp
        UVA/ayo.cpp
        UVA/F.cpp
        wcipeg/COCI_09_Xor.cpp
        wcipeg/PALACINKE.cpp
        yandex/IOI_05_Birthday.cpp
        yandex/IOI_05_Mountain.cpp
        yandex/ioi_06_pyramid.cpp
        yandex/RusOI-reg_16-trains.cpp
        ZOJ/2318.cpp infoarena/mexc.cpp Usaco/19feb_Cowdate_plat.cpp csacademy/CEOI_18_Lottery.cpp infoarena/eq.cpp atcoder/Atcoder060-ARC-E.cpp atcoder/Atcoder160-ARC-F.cpp)

